--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.5.3",
+    "mongoose-unique-validator": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -35,6 +39,7 @@
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
     "@types/jasmine": "~3.6.0",
+    "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
